  one would not want this adjustment, so the module should be set to NULL in
  control.net. The latter performs the printing of simulation results to the
  console. Both functions are now listed in the modules help file accessed by:
  help(modules.net).
* Added progress bars for netdx simulations for computationally intensive
  parts of the simulations.

USER INTERFACE CHANGES
* The internal representation of disease status as an individual-level attribute
  in the stochastic ICM and network models has been changed from number (0, 1, 2)
  to character ("s", "i", "r"). This has few user implications for running the
  integrated models, but one is that the status vector passed into the initial
  conditions functions must now be in this new format. This also impacts the
  expansion of EpiModel for original models.
* The zeromarg argument has been removed from plot.netsim for static network
  plots (type = "network") to reduce potential issues with setting default
  margins on plots. Now they must explicitly be set with standard par options.

API CHANGES
* The ordering of built-in modules within a time step for network simulations
  has been changed such that the network resimulation module is run before the
  infection module. There should be no substantive differences in model results,
  but this provides a more logical consistency between edges toggled on at a
  time step and the infections that may occur over those edges.
* Evaluation of parameters, initial conditions, and control settings in the
  core parameterization functions is now more stable, and also more flexible.
  Defaults for the fixed arguments are now included in the documentation.
* Users may now bypass the built-in param, init, and control functions altogether
  for original ICM and network models, because the definition of new and
  replacement modules occurs within the control functions themselves. The
  existing control functions should be used as a template if one is considering