@@ -1,6 +1,6 @@
 Package: EpiModel
-Version: 1.0.2.214
-Date: 2014-09-08
+Version: 1.0.2.216
+Date: 2014-09-09
 Title: Mathematical Modeling of Infectious Disease
 Description: Tools for simulating mathematical models of infectious disease.
     Epidemic model classes include deterministic compartmental models,
